--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -49,6 +49,9 @@
     {% if settings.dgLinkPreview === true %}
       {%include "components/linkPreview.njk"%}
     {% endif %}
-    {% include "components/themeSwitcher.njk" %}
+
+    {% for imp in dynamics.common.footers %}
+      {% include imp %}
+    {% endfor %}
     </body>
   </html>
