--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -34,12 +34,22 @@
           </div>
         {% endif %}
       </div>
-      
-      {% include "components/forest.njk" %}
+      {% for imp in dynamics.common.header %}
+        {% include imp %}
+      {% endfor %}
+      {% for imp in dynamics.index.header %}
+        {% include imp %}
+      {% endfor %}
       </header>
       {%- for garden in collections.gardenEntry -%}
         {{garden.templateContent | hideDataview | link | taggify | highlight | safe }}
       {%- endfor -%}
+      {% for imp in dynamics.common.afterContent %}
+        {% include imp %}
+      {% endfor %}
+      {% for imp in dynamics.index.afterContent %}
+        {% include imp %}
+      {% endfor %}
     </main>
 
     {% if settings.dgShowBacklinks === true or settings.dgShowLocalGraph === true or settings.dgShowToc === true%}
@@ -50,7 +60,10 @@
       {%include "components/linkPreview.njk"%}
     {% endif %}
 
-    {% for imp in dynamics.common.footers %}
+    {% for imp in dynamics.common.footer %}
+      {% include imp %}
+    {% endfor %}
+    {% for imp in dynamics.index.footer %}
       {% include imp %}
     {% endfor %}
     </body>
