--- a/src/site/_includes/components/linkPreview.njk
+++ b/src/site/_includes/components/linkPreview.njk
@@ -1,4 +1,4 @@
-<!-- All credit for the link preview implementation goes to https://github.com/maximevaillancourt/digital-garden-jekyll-template/blob/master/_includes/link-previews.html -->
+<!-- Credit for the link preview implementation goes to https://github.com/maximevaillancourt/digital-garden-jekyll-template/blob/master/_includes/link-previews.html -->
 <style>
 #tooltip-wrapper {
   background: var(--background-primary);
@@ -99,7 +99,6 @@
               let id = url.split('#')[1];
               const focus = tooltipWrapper.querySelector(`[id='${id}']`);
               focus.classList.add('referred');
-              console.log(focus);
               focus.scrollIntoView({behavior: 'smooth'}, true)
           } else {
               tooltipWrapper.scroll(0, 0);
