--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{{ noteTitle }}</title>
+    <title>{{meta.siteName}}</title>
+    <meta name="google-site-verification" content="yaG9aMIkyWztf-xMSpBoNH-6GdUYIstE-PUpHhZFR2U" />
     {%include "components/pageheader.njk"%}
   </head>
   <body class="theme-{{meta.baseTheme}} markdown-preview-view markdown-rendered markdown-preview-section">
