callout styling fix

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -239,290 +239,6 @@ body {
     }
 }
 
-
-div.language-ad-note,
-div.callout-note {
-    background-color: transparent !important;
-    border: 1px solid rgba(68, 138, 255, .5);
-    .admonition-title {
-        color: rgba(68, 138, 255, .5);
-        &::before {
-            content: "✎" !important;
-        }
-    }
-}
-
-div.language-ad-seealso,
-div.callout-seealso {
-    background-color: transparent !important;
-    border: 1px solid rgba(68, 138, 255, .5);
-    .admonition-title {
-        color: rgba(68, 138, 255, .5);
-    }
-    &::before {
-        content: "✎" !important;
-    }
-}
-
-div.language-ad-abstract,
-div.callout-abstract {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 176, 255, .5);
-    .admonition-title {
-        color:  rgba(0, 176, 255, .5);
-    }
-}
-
-div.language-ad-summary,
-div.callout-summary {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 176, 255, .5);
-    .admonition-title {
-        color:  rgba(0, 176, 255, .5);
-    }
-}
-
-div.language-ad-tldr,
-div.callout-tldr {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 176, 255, .5);
-    .admonition-title {
-        color:  rgba(0, 176, 255, .5);
-    }
-}
-
-div.language-ad-info,
-div.callout-info {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 184, 212, .5);
-    .admonition-title {
-        color: rgba(0, 184, 212, .5);
-    }
-}
-
-div.language-ad-todo,
-div.callout-todo {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 184, 212, .5);
-    .admonition-title {
-        color: rgba(0, 184, 212, .5);
-    }
-}
-
-div.language-ad-tip,
-div.callout-tip {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 191, 165, .5);
-    .admonition-title {
-        color: rgba(0, 191, 165, .5);
-    }
-}
-
-div.language-ad-hint,
-div.callout-hint {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 191, 165, .5);
-    .admonition-title {
-        color: rgba(0, 191, 165, .5);
-    }
-}
-
-div.language-ad-important,
-div.callout-important {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 191, 165, .5);
-    .admonition-title {
-        color: rgba(0, 191, 165, .5);
-    }
-}
-
-div.language-ad-success,
-div.callout-success {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 200, 83, .5);
-    .admonition-title {
-        color:  rgba(0, 200, 83, .5);
-    }
-}
-
-div.language-ad-check,
-div.callout-check {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 200, 83, .5);
-    .admonition-title {
-        color:  rgba(0, 200, 83, .5);
-    }
-}
-
-div.language-ad-done,
-div.callout-done {
-    background-color: transparent !important;
-    border: 1px solid rgba(0, 200, 83, .5);
-    .admonition-title {
-        color:  rgba(0, 200, 83, .5);
-    }
-}
-
-div.language-ad-question,
-div.callout-question {
-    background-color: transparent !important;
-    border: 1px solid rgba(100, 221, 23, .5);
-    .admonition-title {
-        color: rgba(100, 221, 23, .5);
-    }
-}
-
-div.language-ad-help,
-div.callout-help {
-    background-color: transparent !important;
-    border: 1px solid rgba(100, 221, 23, .5);
-    .admonition-title {
-        color: rgba(100, 221, 23, .5);
-    }
-}
-
-div.language-ad-faq,
-div.callout-faq {
-    background-color: transparent !important;
-    border: 1px solid rgba(100, 221, 23, .5);
-    .admonition-title {
-        color: rgba(100, 221, 23, .5);
-    }
-}
-
-div.language-ad-warning,
-div.callout-warning {
-    background-color: transparent !important;
-    border: 1px solid rgba(255, 145, 0, .5);
-    .admonition-title {
-        color: rgba(255, 145, 0, .5);
-        
-    }
-}
-
-div.language-ad-caution,
-div.callout-caution {
-    background-color: transparent !important;
-    border: 1px solid rgba(255, 145, 0, .5);
-    .admonition-title {
-        color: rgba(255, 145, 0, .5);
-    }
-}
-
-div.language-ad-attention,
-div.callout-attention {
-    background-color: transparent !important;
-    border: 1px solid rgba(255, 145, 0, .5);
-    .admonition-title {
-        color: rgba(255, 145, 0, .5);
-    }
-}
-
-div.language-ad-failure,
-div.callout-failure {
-    background-color: transparent !important;
-    border: 1px solid rgba(255, 82, 82, .5);
-    .admonition-title {
-        color: rgba(255, 82, 82, .5);
-    }
-}
-
-div.language-ad-fail,
-div.callout-fail {
-    background-color: transparent !important;
-    border: 1px solid rgba(255, 82, 82, .5);
-    .admonition-title {
-        color: rgba(255, 82, 82, .5);
-    }
-}
-
-div.language-ad-missing,
-div.callout-missing {
-    background-color: transparent !important;
-    border: 1px solid rgba(255, 82, 82, .5);
-    .admonition-title {
-        color: rgba(255, 82, 82, .5);
-    }
-}
-
-div.language-ad-danger,
-div.callout-danger {
-    background-color: transparent !important;
-    border: 1px solid rgba(255, 23, 68, .5);
-    .admonition-title {
-        color: rgba(255, 23, 68, .5);
-    }
-}
-
-div.language-ad-error,
-div.callout-error {
-    background-color: transparent !important;
-    border: 1px solid rgba(255, 23, 68, .5);
-    .admonition-title {
-        color: rgba(255, 23, 68, .5);
-    }
-}
-
-div.language-ad-bug,
-div.callout-bug {
-    background-color: transparent !important;
-    border: 1px solid rgba(245, 0, 87, .5);
-    .admonition-title {
-        color:  rgba(245, 0, 87, .5);
-    }
-}
-
-div.language-ad-example,
-div.callout-example {
-    background-color: transparent !important;
-    border: 1px solid rgba(124, 77, 255, .5);
-    .admonition-title {
-        color: rgba(124, 77, 255, .5);
-    }
-}
-
-div.language-ad-quote,
-div.callout-quote {
-    background-color: transparent !important;
-    border: none;
-    :not(:first-child) {
-        margin-left: 2em;
-        margin-right: 2em;
-    }
-}
-
-div.language-ad-cite,
-div.callout-cite {
-    background-color: transparent !important;
-    border: 1px solid rgba(158, 158, 158, .5);
-}
-
-div[class*="language-ad-"],
-div[class*="callout-"] {
-    
-    .admonition-title::before {
-        font-family: 'Noto Emoji', sans-serif !important;
-    }
-}
-
-div.admonition {
-    position: relative;
-    margin-top: 1.5rem;
-    display: flex;
-    flex-direction: column;
-}
-
-div.admonition-title {
-    background-color: var(--background-primary);
-    padding: 5px 10px;
-    position: absolute;
-    top: -1.5rem;
-    font-size: 0.8em;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1.1px;
-}
-
 .graph-title-container {
     position: relative;
     width: 100% !important;
@@ -604,5 +320,21 @@ div.admonition-title {
             align-items: center;
             margin-top: 0.3rem;
         }
+    }
+}
+
+.callout {
+    background-color: transparent !important;
+    border: 1px solid rgba(var(--callout-color), 1) !important;
+    position: relative;
+    overflow: visible;
+
+    .callout-title {
+        display: inline-flex;
+        position: absolute;
+        top: -10px;
+        background-color: var(--background-primary);
+        padding-left: 5px;
+        padding-right: 5px;
     }
 }
