--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -328,6 +328,7 @@ body {
     border: 1px solid rgba(var(--callout-color), 1) !important;
     position: relative;
     overflow: visible;
+    margin-top: calc(1em + 10px);
 
     .callout-title {
         display: inline-flex;
