--- a/src/site/_includes/components/calloutScript.njk
+++ b/src/site/_includes/components/calloutScript.njk
@@ -5,11 +5,12 @@
         document.querySelectorAll(".callout").forEach((elem) => {
             const icon = getComputedStyle(elem).getPropertyValue('--callout-icon');
             const iconName = icon && icon.trim().replace(/^lucide-/, "");
-
+            
             if (iconName) {
                 const calloutTitle = elem.querySelector(".callout-title");
 
                 if (calloutTitle) {
+                    console.log(iconName, calloutTitle);
                     const calloutIconContainer = document.createElement("div");
                     const calloutIcon = document.createElement("i");
 
