--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -45,14 +45,18 @@
         <meta name="{{ name }}" content="{{ content }}">
     {% endfor %}
     {% if not metatags["og:image"] %}
-        {% if maturity %}
+        {% if tags and "gardenEntry" in tags %}
+            <meta name="og:image" content="{{meta.siteBaseUrl}}/img/cover.jpg">
+        {% elif maturity %}
             <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-{{maturity}}-cover.jpg">
         {% else %}
             <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-1-cover.jpg">
         {% endif %}
     {% endif %}
 {% else %}
-    {% if maturity %}
+    {% if tags and "gardenEntry" in tags %}
+            <meta name="og:image" content="{{meta.siteBaseUrl}}/img/cover.jpg">
+    {% elif maturity %}
         <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-{{maturity}}-cover.jpg">
     {% else %}
         <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-1-cover.jpg">
