--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -401,8 +401,8 @@ body.enable-link-maturity .internal-link[data-maturity="3"]::before {
     background-image: var(--maturity-icon-3);
 }
 
-body.enable-title-maturity .cm-s-obsidian > header > h1[data-maturity="note"]::before,
-body.enable-filetree-maturity .filename[data-maturity="note"]::before,
-body.enable-link-maturity .internal-link[data-maturity="note"]::before {
+body.enable-title-maturity .cm-s-obsidian > header > h1[data-maturity="reading-note"]::before,
+body.enable-filetree-maturity .filename[data-maturity="reading-note"]::before,
+body.enable-link-maturity .internal-link[data-maturity="reading-note"]::before {
     background-image: url(/img/note.svg);
 }
