--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -5,6 +5,10 @@
 
 body {
     overflow-x: hidden;
+    --note-icon-1: url(/img/tree-1.svg);
+    --note-icon-2: url(/img/tree-2.svg);
+    --note-icon-3: url(/img/tree-3.svg);
+    --note-icon-fallback: url(/img/default-note-icon.svg);
 }
 
 .content {
@@ -15,16 +19,15 @@ body {
     margin-top: 90px;
     position: relative;
 
-    @media(max-width: 800px) {
+    @media (max-width: 800px) {
         margin-top: 75px;
     }
-
 }
 
 .external-link {
     background-position: center right;
     background-repeat: no-repeat;
-    background-image: linear-gradient(transparent, transparent), url('/img/outgoing.svg');
+    background-image: linear-gradient(transparent, transparent), url("/img/outgoing.svg");
     background-size: 13px;
     padding-right: 16px;
     background-position-y: 4px;
@@ -88,10 +91,10 @@ ul.task-list {
 }
 
 .toc-container {
-    font-size: 1rem; 
-    max-height: 220px; 
+    font-size: 1rem;
+    max-height: 220px;
     overflow-y: auto;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     border-left: 1px solid var(--text-accent);
     ul {
         list-style-type: none;
@@ -100,19 +103,19 @@ ul.task-list {
         margin-bottom: 0;
     }
     ul:not(:first-child) {
-        margin-bottom:3px;
+        margin-bottom: 3px;
     }
 
-    li{
+    li {
         padding-top: 4px;
-        &::before{
-            content: '# ' !important;
+        &::before {
+            content: "# " !important;
             color: var(--text-accent);
             font-size: 0.8rem;
         }
-        a{
+        a {
             text-decoration: none;
-            &:hover{
+            &:hover {
                 text-decoration: underline;
             }
         }
@@ -149,7 +152,7 @@ ul.task-list {
     border-left: 1px solid var(--text-accent);
     max-height: 200px;
     overflow-y: auto;
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
 
 .backlink-card {
@@ -164,15 +167,14 @@ ul.task-list {
     }
 }
 
-.no-backlinks-message{
+.no-backlinks-message {
     font-size: 0.8rem;
     color: var(--text-normal);
 }
 
 .graph {
-
     .graph-title-container {
-        display: flex; 
+        display: flex;
         justify-content: flex-end;
         width: 320px;
     }
@@ -195,9 +197,7 @@ ul.task-list {
     width: fit-content;
 }
 
-
-
-@media(max-width: 1400px) {
+@media (max-width: 1400px) {
     #link-graph {
         border-radius: 0 10px 10px 10px;
     }
@@ -209,11 +209,11 @@ ul.task-list {
         max-width: 700px;
         margin: auto;
         border-radius: 0;
-        border-top: 2px solid var(--background-secondary); 
+        border-top: 2px solid var(--background-secondary);
         justify-content: space-between;
     }
 
-    .sidebar-container{
+    .sidebar-container {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -221,7 +221,7 @@ ul.task-list {
 
     .graph {
         flex: 1;
-        .graph-title-container{
+        .graph-title-container {
             justify-content: flex-start;
         }
     }
@@ -230,8 +230,8 @@ ul.task-list {
         display: none;
     }
 }
-@media(max-width: 800px) {
-    .sidebar-container{
+@media (max-width: 800px) {
+    .sidebar-container {
         display: flex;
         flex-direction: column-reverse;
     }
@@ -252,7 +252,7 @@ ul.task-list {
     h1 {
         font-size: 32px !important;
     }
-    @media(max-width: 800px) {
+    @media (max-width: 800px) {
         h1 {
             display: none;
         }
@@ -269,7 +269,7 @@ ul.task-list {
     justify-content: flex-end;
     margin-bottom: -60px;
 
-    @media(max-width: 800px) {
+    @media (max-width: 800px) {
         justify-content: center;
     }
 
@@ -290,11 +290,11 @@ ul.task-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    @media(max-width: 1400px) {
+    @media (max-width: 1400px) {
         position: fixed;
     }
 
-    @media(max-width: 800px) {
+    @media (max-width: 800px) {
         h1 {
             font-size: 18px !important;
         }
@@ -307,8 +307,7 @@ ul.task-list {
     }
 
     .search-button {
-
-        @media(max-width: 800px) {
+        @media (max-width: 800px) {
             min-width: 36px;
             margin: 10px 25px 10px 25px;
         }
@@ -317,7 +316,7 @@ ul.task-list {
     .search-text {
         display: flex;
         justify-content: center;
-        @media(max-width: 800px){
+        @media (max-width: 800px) {
             display: none;
         }
     }
@@ -325,7 +324,7 @@ ul.task-list {
 
 .notelink {
     padding: 5px 0 5px 25px;
-    a{
+    a {
         &:hover {
             text-decoration: underline !important;
         }
@@ -361,9 +360,8 @@ ul.task-list {
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 5
+    z-index: 5;
 }
-
 
 .search-container {
     background-color: rgba(0, 0, 0, 0.5);
@@ -400,7 +398,6 @@ ul.task-list {
     font-size: 2rem;
     background-color: var(--background-primary);
     color: var(--text-primary);
-
 }
 
 .search-box input:focus {
@@ -425,7 +422,7 @@ ul.task-list {
     font-size: 1.2rem;
     cursor: pointer;
 
-    &.active{
+    &.active {
         border: 2px solid var(--text-accent);
     }
 }
@@ -459,25 +456,21 @@ ul.task-list {
     border: 1px solid var(--text-normal);
     cursor: pointer;
 
-    >span {
+    > span {
         padding: 3px 3px 3px 10px;
     }
 
-    >i {
+    > i {
         margin-left: 10px;
     }
 
     &:hover {
         border: 1px solid var(--text-accent);
     }
-
-
 }
 
-
-
 .search-keys {
-    @media(max-width: 800px) {
+    @media (max-width: 800px) {
         display: none;
     }
 }
@@ -487,12 +480,12 @@ ul.task-list {
 .callout-icon,
 .callout-fold,
 .callout-content {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
-.callout-fold{
-   cursor: pointer; 
+.callout-fold {
+    cursor: pointer;
 }
 
 .callout-title {
@@ -501,10 +494,10 @@ ul.task-list {
 }
 
 .callout {
-  font-family: "Roboto", sans-serif;
-  word-wrap: break-word;
-  display: block;
-  font-size: 1rem;
+    font-family: "Roboto", sans-serif;
+    word-wrap: break-word;
+    display: block;
+    font-size: 1rem;
 }
 
 .callout.is-collapsed {
@@ -524,12 +517,10 @@ ul.task-list {
 .referred {
     border: 1px dashed;
     border-color: var(--text-accent);
-    padding: 10px;  
+    padding: 10px;
     margin-left: -10px;
-    margin-right: -10px; 
+    margin-right: -10px;
 }
-
-
 
 // Graph Controls
 .graph-title-container {
@@ -585,7 +576,7 @@ ul.task-list {
         flex-direction: row;
         align-items: flex-start;
         gap: 7px;
-        
+
         .slider {
             datalist {
                 display: flex;
@@ -616,7 +607,38 @@ ul.task-list {
     }
 }
 
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  margin-top: -10px;
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    margin-top: -10px;
+}
+
+body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon]::before,
+body.filetree-note-icon .filename[data-note-icon]::before,
+body.links-note-icon .internal-link[data-note-icon]::before {
+    content: " ";
+    display: inline-block;
+    width: 0.9em;
+    height: 1em;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-image: var(--note-icon-fallback);
+}
+
+body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="1"]::before,
+body.filetree-note-icon .filename[data-note-icon="1"]::before,
+body.links-note-icon .internal-link[data-note-icon="1"]::before {
+    background-image: var(--note-icon-1);
+}
+
+body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="2"]::before,
+body.filetree-note-icon .filename[data-note-icon="2"]::before,
+body.links-note-icon .internal-link[data-note-icon="2"]::before {
+    background-image: var(--note-icon-2);
+}
+
+body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="3"]::before,
+body.filetree-note-icon .filename[data-note-icon="3"]::before,
+body.links-note-icon .internal-link[data-note-icon="3"]::before {
+    background-image: var(--note-icon-3);
 }
