--- a/src/site/_includes/components/pageheader.njk
+++ b/src/site/_includes/components/pageheader.njk
@@ -47,18 +47,18 @@
     {% if not metatags["og:image"] %}
         {% if tags and "gardenEntry" in tags %}
             <meta name="og:image" content="{{meta.siteBaseUrl}}/img/cover.jpg">
-        {% elif maturity %}
-            <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-{{maturity}}-cover.jpg">
+        {% elif noteIcon in [1, 2, 3]%}
+            <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-{{noteIcon}}-cover.jpg">
         {% else %}
-            <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-1-cover.jpg">
+            <meta name="og:image" content="{{meta.siteBaseUrl}}/img/cover.jpg">
         {% endif %}
     {% endif %}
 {% else %}
     {% if tags and "gardenEntry" in tags %}
             <meta name="og:image" content="{{meta.siteBaseUrl}}/img/cover.jpg">
-    {% elif maturity %}
-        <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-{{maturity}}-cover.jpg">
+    {% elif noteIcon in [1, 2, 3] %}
+        <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-{{noteIcon}}-cover.jpg">
     {% else %}
-        <meta name="og:image" content="{{meta.siteBaseUrl}}/img/tree-1-cover.jpg">
+        <meta name="og:image" content="{{meta.siteBaseUrl}}/img/cover.jpg">
     {% endif %}
 {% endif %}
