--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -275,14 +275,19 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    height: 60vh;
-    width: 60vw;
-    min-height: 400px;
-    min-width: 400px;
+    height: calc(100vmin - 100px);
+    width: calc(100vmin - 100px);
+    min-height: 350px;
+    min-width: 350px;
     transform: translate(-50%, -50%);
     z-index: 9999;
     display: none;
     background-color: var(--background-secondary);
+
+    #full-graph-container {
+        width: 100%;
+        height: 100%;
+    }
 
     #full-graph-close {
         position: absolute;
@@ -311,7 +316,7 @@ body {
     color: var(--text-accent);
     z-index: 9;
 
-    #graph-full-btn {
+    i {
         cursor: pointer;
     }
 
@@ -371,4 +376,35 @@ body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="stone"]::befor
 body.filetree-note-icon .filename[data-note-icon="stone"]::before,
 body.links-note-icon .internal-link[data-note-icon="stone"]::before {
     background-image: url(/img/stone.svg);
+}
+
+body {
+    .sidebar {
+        .graph {
+            width: 320px;
+            height: 320px;
+
+            #link-graph {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .graph-fs {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            height: calc(100vmin - 100px);
+            width: calc(100vmin - 100px);
+            min-height: 350px;
+            min-width: 350px;
+            transform: translate(-50%, -50%);
+            z-index: 9999;
+            display: none;
+            background-color: var(--background-secondary);
+
+            .graph-title {
+                display: none;
+            }
+        }
+    }
 }
