removed unnecessary variables

--- a/src/site/_includes/components/graphScript.njk
+++ b/src/site/_includes/components/graphScript.njk
@@ -50,7 +50,7 @@
 
     var Graph;
 
-    function renderGraph(graphData, id, width, height, delay) {
+    function renderGraph(graphData, id, delay) {
         const el = document.getElementById(id);
         width = el.offsetWidth;
         height = el.offsetHeight;
@@ -140,7 +140,7 @@
     function fetchGraphData() {
         fetch('/graph.json').then(res => res.json()).then(data => {
             window.graphData = data;
-            Graph = renderGraph(filterToDepth(JSON.parse(JSON.stringify(data))), "link-graph", 320, 320, 1);
+            Graph = renderGraph(filterToDepth(JSON.parse(JSON.stringify(data))), "link-graph", 1);
         });
     }
 
@@ -155,7 +155,7 @@
             Graph._destructor();
             Graph = null;
         }
-        renderGraph(filterToDepth(JSON.parse(JSON.stringify(window.graphData))), "link-graph", 320, 320, 1);
+        renderGraph(filterToDepth(JSON.parse(JSON.stringify(window.graphData))), "link-graph", 1);
     })
 
     window.fullGraph = null;
@@ -171,7 +171,7 @@
             g.classList.add('show');
             document.body.appendChild(g);
             g.innerHTML = '<i class="fa fa-times" id="full-graph-close" aria-hidden="true"></i><div id="full-graph-container"></div>';
-            window.fullGraph = renderGraph(graphData, "full-graph-container", g.offsetWidth, g.offsetHeight, 200);
+            window.fullGraph = renderGraph(graphData, "full-graph-container", 200);
             document.getElementById('full-graph-close').addEventListener('click', (evt) => {
                 g.classList.remove('show');
                 window.fullGraph._destructor();
